# LSV-FINAL

./: .gitignore  11_demo.pptx  CMakeLists.txt  Makefile  README.md  demo.cpp  download_lib.py  tmp
include/cir/: cirGate.h  cirMgr.h
include/match/: inputSolver.h  match.h  outputSolver.h
include/sat/: sat.h
include/util/: cirParser.h  genAag.h  myHashMap.h  util.h
src/: Makefile.in
src/cir/: .depend.mak  CMakeLists.txt  cirCmd.cpp  cirDef.h  cirFraig.cpp  cirGate.cpp  cirMgr.cpp  cirOpt.cpp  cirSim.cpp  fec.cpp  fec.h
src/main/: bmatch.cpp
src/match/: CMakeLists.txt  inputSolver.cpp  match.cpp  outputSolver.cpp
src/sat/: CMakeLists.txt  sat.cpp
src/sat/test/: satTest
src/util/: CMakeLists.txt  aigToAag.c  aigToAag.h  cirParser.cpp  genAag.cpp  myString.cpp  util.cpp
